[gd_scene load_steps=12 format=4 uid="uid://cdhlmspr1q7iy"]

[ext_resource type="Texture2D" uid="uid://ckbgmihmh5sku" path="res://PreAssets/free.png" id="1_iar4r"]
[ext_resource type="Script" path="res://game.gd" id="1_n621x"]
[ext_resource type="Texture2D" uid="uid://xw7puoatdoh0" path="res://Space Background.png" id="2_8v7at"]
[ext_resource type="PackedScene" uid="uid://dekojcd44bhjd" path="res://PreAssets/RHood.tscn" id="2_je5ht"]
[ext_resource type="PackedScene" path="res://six_shot.tscn" id="2_mlph4"]
[ext_resource type="PackedScene" path="res://kill.tscn" id="3_hoj7u"]
[ext_resource type="PackedScene" uid="uid://d0cvqhnes0rav" path="res://Agis.tscn" id="5_mqyhg"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ym2ry"]
texture = ExtResource("1_iar4r")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
21:0/0 = 0
22:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:1/0 = 0
11:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:1/0 = 0
16:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:2/0 = 0
10:2/0 = 0
10:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:2/0 = 0
11:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:2/0 = 0
12:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
16:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:2/0 = 0
18:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:3/0 = 0
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
12:3/0 = 0
13:3/0 = 0
13:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:3/0 = 0
14:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:3/0 = 0
15:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:3/0 = 0
17:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
15:4/0 = 0
16:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
16:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
0:9/0 = 0
2:9/0 = 0
3:9/0 = 0
5:9/0 = 0
7:9/0 = 0
8:9/0 = 0
11:9/0 = 0
12:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
7:10/0 = 0
8:10/0 = 0
11:10/0 = 0
12:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
0:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0

[sub_resource type="TileSet" id="TileSet_33mpf"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_ym2ry")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ey16o"]
size = Vector2(96, 5)

[sub_resource type="Curve2D" id="Curve2D_b3wc1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -256, -152, 0, 0, 0, 0, 0, -152, 0, 0, 0, 0, 256, -152, 0, 0, 0, 0, 256, -64, 0, 0, 0, 0, 0, -64, 0, 0, 0, 0, -256, -64, 0, 0, 0, 0, -256, -152)
}
point_count = 7

[node name="Game" type="Node2D"]
script = ExtResource("1_n621x")
boolets = ExtResource("2_mlph4")

[node name="SpaceBackground" type="Sprite2D" parent="."]
position = Vector2(-20, -228)
texture = ExtResource("2_8v7at")

[node name="Agis" parent="." instance=ExtResource("5_mqyhg")]
position = Vector2(-1, -81)

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_33mpf")
format = 2

[node name="TileMapLayer" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD1/wAAAAAKAAEAAAAKAAAAAAATAAEAAAAGAAAAAAASAAEAAAAHAAAAAAAQAAEAAAAIAAAAAAARAAEAAAAJAAAAAAASAAEAAAACAAAAAAAQAAEAAAADAAAAAAARAAEAAAAEAAAAAAASAAEAAAAFAAAAAAARAAEAAAD//wAAAAASAAEAAAAAAAAAAAARAAEAAAABAAAAAAASAAEAAAD9/wAAAAARAAEAAAD+/wAAAAASAAEAAAD8/wAAAAAQAAEAAAD5/wAAAAAQAAEAAAD6/wAAAAARAAEAAAD7/wAAAAASAAEAAAD2/wAAAAAQAAEAAAD3/wAAAAARAAEAAAD4/wAAAAASAAEAAAD1/wEAAAAKAAIAAAAKAAEAAAATAAIAAAAJAAEAAAASAAIAAAAIAAEAAAASAAIAAAAHAAEAAAARAAIAAAD2/wEAAAALAAIAAAD3/wEAAAAMAAIAAAD3/wIAAAAMAAMAAAD4/wIAAAANAAMAAAD5/wIAAAANAAMAAAD6/wIAAAAOAAMAAAD7/wIAAAAPAAMAAAD8/wIAAAAOAAMAAAD9/wIAAAAPAAMAAAD+/wIAAAAOAAMAAAD//wIAAAAPAAMAAAAAAAIAAAAPAAMAAAABAAIAAAAPAAMAAAACAAIAAAAOAAMAAAADAAIAAAARAAIAAAADAAMAAAARAAMAAAAEAAIAAAAOAAMAAAAFAAIAAAAPAAMAAAAGAAIAAAAQAAMAAAAHAAIAAAARAAMAAAAFAAEAAAAPAAIAAAAGAAEAAAAQAAIAAAD4/wEAAAAPAAIAAAD5/wEAAAAQAAIAAAD6/wEAAAANAAIAAAD7/wEAAAAOAAIAAAD//wEAAAADAAMAAAAAAAEAAAAEAAMAAAD9/wEAAAAAAAUAAAD+/wEAAAABAAUAAAABAAEAAAAAAAUAAAACAAEAAAABAAUAAAD8/wEAAAADAAIAAAADAAEAAAAEAAIAAAAEAAEAAAAPAAIAAAASAAAAAAAKAAEAAAASAAEAAAAKAAIAAAATAAAAAAALAAEAAAATAAEAAAALAAIAAAAUAAAAAAAMAAEAAAAUAAEAAAAMAAIAAAAUAAIAAAAMAAMAAAAVAAAAAAAQAAEAAAAVAAEAAAANAAIAAAAVAAIAAAANAAMAAAAWAAAAAAARAAEAAAAWAAEAAAAOAAIAAAAWAAIAAAAOAAMAAAAXAAAAAAAPAAEAAAAXAAEAAAAPAAIAAAAXAAIAAAAPAAMAAAAYAAAAAAAQAAEAAAAYAAEAAAAQAAIAAAAYAAIAAAAQAAMAAAAZAAAAAAARAAEAAAAZAAEAAAARAAIAAAAZAAIAAAARAAMAAAAaAAAAAAASAAEAAAAaAAEAAAASAAIAAAAbAAAAAAATAAEAAAAbAAEAAAATAAIAAADk/wAAAAAKAAEAAADk/wEAAAAKAAIAAADl/wAAAAALAAEAAADl/wEAAAALAAIAAADm/wAAAAAMAAEAAADm/wEAAAAMAAIAAADm/wIAAAAMAAMAAADn/wAAAAAQAAEAAADn/wEAAAANAAIAAADn/wIAAAANAAMAAADo/wAAAAARAAEAAADo/wEAAAAOAAIAAADo/wIAAAAOAAMAAADp/wAAAAAPAAEAAADp/wEAAAAPAAIAAADp/wIAAAAPAAMAAADq/wAAAAAQAAEAAADq/wEAAAAQAAIAAADq/wIAAAAQAAMAAADr/wAAAAARAAEAAADr/wEAAAARAAIAAADr/wIAAAARAAMAAADs/wAAAAASAAEAAADs/wEAAAASAAIAAADt/wAAAAATAAEAAADt/wEAAAATAAIAAAD1////AAAAAAkAAAD3////AAACAAkAAAD4////AAADAAkAAAD6////AAAFAAkAAAAFAP//AAAAAAkAAAAHAP//AAACAAkAAAAIAP//AAADAAkAAAAKAP//AAAFAAkAAAAFAP7/AAAAAAkAAAAHAP7/AAACAAkAAAAIAP7/AAADAAkAAAAKAP7/AAAFAAkAAAAFAP3/AAAAAAgAAAAHAP3/AAACAAgAAAAIAP3/AAADAAgAAAAKAP3/AAAFAAgAAAD1//7/AAAAAAkAAAD3//7/AAACAAkAAAD4//7/AAADAAkAAAD6//7/AAAFAAkAAAD1//3/AAAAAAgAAAD3//3/AAACAAgAAAD4//3/AAADAAgAAAD6//3/AAAFAAgAAAD9////AAAAAAkAAAD9//7/AAAAAAkAAAD9//3/AAAAAAkAAAD9//z/AAAAAAgAAAD+//z/AAABAAgAAAACAP//AAAFAAkAAAACAP7/AAAFAAkAAAACAP3/AAAFAAkAAAACAPz/AAAFAAgAAAABAPz/AAAEAAgAAAAAAPz/AAADAAgAAAD///z/AAACAAgAAAD/////AAACAAkAAAAAAP//AAADAAkAAAD///7/AAACAAkAAAAAAP7/AAADAAkAAAD///3/AAACAAkAAAAAAP3/AAADAAkAAAAGAP3/AAABAAgAAAAJAP3/AAAEAAgAAAD2//3/AAABAAgAAAD5//3/AAAEAAgAAAAFAPn/AAAAAAgAAAAGAPn/AAABAAgAAAAHAPn/AAACAAgAAAAIAPn/AAADAAgAAAAJAPn/AAAEAAgAAAAKAPn/AAAFAAgAAAD1//n/AAAAAAgAAAD2//n/AAABAAgAAAD3//n/AAACAAgAAAD4//n/AAADAAgAAAD5//n/AAAEAAgAAAD6//n/AAAFAAgAAAD1//r/AAAAAAkAAAD1//v/AAAAAAkAAAD1//z/AAAAAAkAAAD3//r/AAACAAkAAAD4//r/AAADAAkAAAD3//v/AAACAAkAAAD4//v/AAADAAkAAAD3//z/AAACAAkAAAD4//z/AAADAAkAAAD6//r/AAAFAAkAAAD6//v/AAAFAAkAAAD6//z/AAAFAAkAAAAKAPr/AAAFAAkAAAAKAPv/AAAFAAkAAAAKAPz/AAAFAAkAAAAHAPr/AAACAAkAAAAIAPr/AAADAAkAAAAHAPv/AAACAAkAAAAIAPv/AAADAAkAAAAHAPz/AAACAAkAAAAIAPz/AAADAAkAAAAFAPr/AAAAAAkAAAAFAPv/AAAAAAkAAAAFAPz/AAAAAAkAAADm////AAAAAAkAAADo////AAACAAkAAADp////AAADAAkAAADr////AAAFAAkAAADm//7/AAAAAAkAAADo//7/AAACAAkAAADp//7/AAADAAkAAADr//7/AAAFAAkAAADm//3/AAAAAAgAAADo//3/AAACAAgAAADp//3/AAADAAgAAADr//3/AAAFAAgAAADn//3/AAABAAgAAADq//3/AAAEAAgAAADm//z/AAAAAAkAAADo//z/AAACAAkAAADp//z/AAADAAkAAADr//z/AAAFAAkAAADm//v/AAAAAAkAAADo//v/AAACAAkAAADp//v/AAADAAkAAADr//v/AAAFAAkAAADm//r/AAAAAAkAAADo//r/AAACAAkAAADp//r/AAADAAkAAADr//r/AAAFAAkAAADm//n/AAAAAAgAAADn//n/AAABAAgAAADo//n/AAACAAgAAADp//n/AAADAAgAAADq//n/AAAEAAgAAADr//n/AAAFAAgAAAAUAP//AAAAAAkAAAAWAP//AAACAAkAAAAXAP//AAADAAkAAAAZAP//AAAFAAkAAAAUAP7/AAAAAAkAAAAWAP7/AAACAAkAAAAXAP7/AAADAAkAAAAZAP7/AAAFAAkAAAAUAP3/AAAAAAgAAAAWAP3/AAACAAgAAAAXAP3/AAADAAgAAAAZAP3/AAAFAAgAAAAUAPz/AAAAAAkAAAAWAPz/AAACAAkAAAAXAPz/AAADAAkAAAAZAPz/AAAFAAkAAAAUAPv/AAAAAAkAAAAWAPv/AAACAAkAAAAXAPv/AAADAAkAAAAZAPv/AAAFAAkAAAAUAPr/AAAAAAkAAAAWAPr/AAACAAkAAAAXAPr/AAADAAkAAAAZAPr/AAAFAAkAAAAVAP3/AAABAAgAAAAYAP3/AAAEAAgAAAAUAPn/AAAAAAgAAAAVAPn/AAABAAgAAAAWAPn/AAACAAgAAAAXAPn/AAADAAgAAAAYAPn/AAAEAAgAAAAZAPn/AAAFAAgAAAA=")
tile_set = SubResource("TileSet_33mpf")

[node name="CharacterBody2D" parent="." instance=ExtResource("2_je5ht")]
position = Vector2(0, -40)

[node name="Platform_collisions" type="StaticBody2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(-368, -46)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(-368, -110)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(-128, -110)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(-128, -45)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(0, -62)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(127, -46)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(127, -110)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(368, -110)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Platform_collisions"]
position = Vector2(368, -46)
shape = SubResource("RectangleShape2D_ey16o")
one_way_collision = true

[node name="Area2D" parent="." instance=ExtResource("3_hoj7u")]
position = Vector2(0, 224)

[node name="Score" type="Timer" parent="."]
autostart = true

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_b3wc1")

[node name="boolet_spwnPoints" type="PathFollow2D" parent="Path2D"]
position = Vector2(-256, -152)

[node name="Attack" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Score" to="." method="_on_score_timeout"]
[connection signal="timeout" from="Score" to="CharacterBody2D" method="_on_score_timeout"]
[connection signal="timeout" from="Attack" to="." method="_on_attack_timeout"]
